[tool.poetry]
name = "db-boundary-profiler"
version = "0.1.0"
description = "Measure latency/throughput and OS boundary overhead between app and database"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "db_boundary_profiler", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
dbbp = "db_boundary_profiler.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
